docker: don't build external simulators in parallel
This currently oversubscribes cores.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,10 @@
 FROM gcr.io/simbricks/simbricks-builder AS builder
 COPY --chown=simbricks:simbricks . /simbricks/
 WORKDIR /simbricks/
-RUN make -j`nproc` all external && \
+RUN make -j`nproc` all && \
+    make -j`nproc` sims/external/qemu/ready && \
+    make -j`nproc` sims/external/gem5/ready && \
+    make -j`nproc` sims/external/ns-3/ready && \
     /bin/sh docker/cleanup.sh
 
 FROM gcr.io/simbricks/simbricks-builder
