--- a/docker/Dockerfile.buildenv
+++ b/docker/Dockerfile.buildenv
@@ -33,20 +33,9 @@ RUN apt-get update \
 	unzip \
 	wget \
 	nano \
+	verilator \
 	vim \
  && rm -rf /var/lib/apt/lists/*
-COPY verilator.patch /tmp/
-RUN cd /tmp \
- && git clone -b v4.010 https://github.com/verilator/verilator \
- && cd verilator \
- && patch -p1 < /tmp/verilator.patch \
- && autoupdate \
- && autoconf \
- && ./configure \
- && make -j`nproc` \
- && make install \
- && rm -rf /tmp/verilator
-
 # Add non-root user for vs code devcontainer.
 ARG USERNAME=simbricks
 ARG USER_UID=1000
